--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:maxLength="7"
         android:inputType="number"
         android:layout_marginTop="20dp"
-        android:hint="账号"
+        android:hint="输入账号"
         android:layout_width="match_parent"
         android:layout_height="45dp"/>
     <EditText
@@ -38,7 +38,7 @@
         android:singleLine="true"
         android:maxLength="9"
         android:layout_marginTop="10dp"
-        android:hint="密码"
+        android:hint="输入密码"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="45dp"/>
